# sapi-lite

./: Cargo.toml  README.md
examples/: events.rs  grammar.rs  hello_stt.rs  hello_tts.rs  milliways.rs  speech.rs  stream_stt.rs  stream_tts.rs  voices.rs
src/: audio.rs  com_util.rs  event.rs  lib.rs  token.rs  tokio.rs  tts.rs
src/audio/: format.rs  mod.rs  stream.rs
src/com_util/: intf.rs  iter.rs  locale.rs  mem.rs  mod.rs  str.rs  weak.rs
src/stt/: context.rs  grammar.rs  mod.rs  phrase.rs  semantics.rs  tokio.rs
src/stt/context/: event.rs  mod.rs  sync.rs
src/stt/grammar/: builder.rs  mod.rs  rule.rs
src/stt/grammar/rule/: arena.rs  mod.rs
src/stt/semantics/: mod.rs  string.rs  tree.rs  value.rs
src/tokio/: mod.rs  rt.rs  stt.rs  tts.rs
src/tts/: mod.rs  speech.rs  voice.rs
src/tts/speech/: builder.rs  mod.rs  types.rs
src/tts/synthesizer/: event.rs  mod.rs  sync.rs
tests/: round_trip.rs
