[package]
name = "sapi-lite"
version = "0.1.0"
authors = ["Vojislav Stojkovic <zinthys@gmail.com>"]
edition = "2021"

description = "A simplified wrapper around Microsoft's Speech API (SAPI) library"
readme = "README.md"
license = "Apache-2.0"
keywords = ["speech", "tts", "sapi", "microsoft", "windows"]

repository = "https://github.com/vstojkovic/sapi-lite"

[features]
default = []
tokio-all = ["tokio-rt", "tokio-stt", "tokio-tts"]
tokio-rt = ["tokio/rt"]
tokio-stt = ["tokio/sync"]
tokio-tts = ["tokio/sync"]

[dependencies]
strum = "0.23"
strum_macros = "0.23"
tokio = { version = "1.16", optional = true }
typed-arena = "2.0.1"
windows = { version = "0.28", features = [
    "alloc", "build", "std", "Win32_Foundation", "Win32_Globalization", "Win32_Media_Audio",
    "Win32_Media_Speech", "Win32_System_Com", "Win32_System_Ole", "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming", "Win32_UI_Shell"
] }
xml-rs = "0.8.4"

[dev-dependencies]
futures = "0.3.0"
tokio = { version = "1.16", features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.0", features = ["codec"] }

[[example]]
name = "milliways"
required-features = ["tokio-all"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-pc-windows-msvc", "i686-pc-windows-msvc"]
